// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Capabilities Alignment Tests Capabilities Manager Integration should return development capabilities in development mode: capabilities-manager-development 1`] = `
{
  "callHierarchyProvider": undefined,
  "codeActionProvider": undefined,
  "codeLensProvider": {
    "resolveProvider": false,
  },
  "colorProvider": undefined,
  "completionProvider": {
    "resolveProvider": false,
    "triggerCharacters": [
      ".",
    ],
  },
  "declarationProvider": undefined,
  "definitionProvider": true,
  "diagnosticProvider": {
    "identifier": "apex-ls-ts",
    "interFileDependencies": true,
    "workspaceDiagnostics": false,
  },
  "documentFormattingProvider": undefined,
  "documentHighlightProvider": undefined,
  "documentLinkProvider": undefined,
  "documentOnTypeFormattingProvider": undefined,
  "documentRangeFormattingProvider": undefined,
  "documentSymbolProvider": true,
  "executeCommandProvider": undefined,
  "experimental": {
    "findMissingArtifactProvider": {
      "enabled": true,
      "maxCandidatesToOpen": 3,
      "supportedModes": [
        "blocking",
        "background",
      ],
      "timeoutMsHint": 2000,
    },
  },
  "foldingRangeProvider": true,
  "hoverProvider": true,
  "implementationProvider": undefined,
  "inlayHintProvider": undefined,
  "inlineCompletionProvider": undefined,
  "inlineValueProvider": undefined,
  "linkedEditingRangeProvider": undefined,
  "monikerProvider": undefined,
  "publishDiagnostics": true,
  "referencesProvider": true,
  "renameProvider": undefined,
  "selectionRangeProvider": undefined,
  "semanticTokensProvider": undefined,
  "signatureHelpProvider": undefined,
  "textDocumentSync": {
    "change": 1,
    "openClose": true,
    "save": true,
    "willSave": false,
    "willSaveWaitUntil": false,
  },
  "typeDefinitionProvider": undefined,
  "typeHierarchyProvider": undefined,
  "workspace": {
    "workspaceFolders": {
      "changeNotifications": true,
      "supported": true,
    },
  },
  "workspaceSymbolProvider": undefined,
}
`;

exports[`Capabilities Alignment Tests Capabilities Manager Integration should return production capabilities in production mode: capabilities-manager-production 1`] = `
{
  "callHierarchyProvider": undefined,
  "codeActionProvider": undefined,
  "codeLensProvider": {
    "resolveProvider": false,
  },
  "colorProvider": undefined,
  "completionProvider": undefined,
  "declarationProvider": undefined,
  "definitionProvider": undefined,
  "diagnosticProvider": {
    "identifier": "apex-ls-ts",
    "interFileDependencies": false,
    "workspaceDiagnostics": false,
  },
  "documentFormattingProvider": undefined,
  "documentHighlightProvider": undefined,
  "documentLinkProvider": undefined,
  "documentOnTypeFormattingProvider": undefined,
  "documentRangeFormattingProvider": undefined,
  "documentSymbolProvider": true,
  "executeCommandProvider": undefined,
  "experimental": {
    "findMissingArtifactProvider": {
      "enabled": false,
      "maxCandidatesToOpen": 3,
      "supportedModes": [
        "blocking",
        "background",
      ],
      "timeoutMsHint": 1500,
    },
  },
  "foldingRangeProvider": false,
  "hoverProvider": undefined,
  "implementationProvider": undefined,
  "inlayHintProvider": undefined,
  "inlineCompletionProvider": undefined,
  "inlineValueProvider": undefined,
  "linkedEditingRangeProvider": undefined,
  "monikerProvider": undefined,
  "publishDiagnostics": false,
  "referencesProvider": true,
  "renameProvider": undefined,
  "selectionRangeProvider": undefined,
  "semanticTokensProvider": undefined,
  "signatureHelpProvider": undefined,
  "textDocumentSync": {
    "change": 1,
    "openClose": true,
    "save": true,
    "willSave": false,
    "willSaveWaitUntil": false,
  },
  "typeDefinitionProvider": undefined,
  "typeHierarchyProvider": undefined,
  "workspace": {
    "workspaceFolders": {
      "changeNotifications": true,
      "supported": true,
    },
  },
  "workspaceSymbolProvider": undefined,
}
`;

exports[`Capabilities Alignment Tests Capability Feature Alignment should have consistent provider capabilities: provider-capabilities-comparison 1`] = `
{
  "development": {
    "completionProvider": {
      "resolveProvider": false,
      "triggerCharacters": [
        ".",
      ],
    },
    "diagnosticProvider": {
      "identifier": "apex-ls-ts",
      "interFileDependencies": true,
      "workspaceDiagnostics": false,
    },
    "documentSymbolProvider": true,
    "foldingRangeProvider": true,
    "hoverProvider": true,
  },
  "production": {
    "completionProvider": undefined,
    "diagnosticProvider": {
      "identifier": "apex-ls-ts",
      "interFileDependencies": false,
      "workspaceDiagnostics": false,
    },
    "documentSymbolProvider": true,
    "foldingRangeProvider": false,
    "hoverProvider": undefined,
  },
}
`;

exports[`Capabilities Alignment Tests Capability Feature Alignment should have consistent text document sync capabilities: development-text-document-sync 1`] = `
{
  "change": 1,
  "openClose": true,
  "save": true,
  "willSave": false,
  "willSaveWaitUntil": false,
}
`;

exports[`Capabilities Alignment Tests Capability Feature Alignment should have consistent text document sync capabilities: production-text-document-sync 1`] = `
{
  "change": 1,
  "openClose": true,
  "save": true,
  "willSave": false,
  "willSaveWaitUntil": false,
}
`;

exports[`Capabilities Alignment Tests Capability Feature Alignment should have consistent workspace capabilities: development-workspace-capabilities 1`] = `
{
  "workspaceFolders": {
    "changeNotifications": true,
    "supported": true,
  },
}
`;

exports[`Capabilities Alignment Tests Capability Feature Alignment should have consistent workspace capabilities: production-workspace-capabilities 1`] = `
{
  "workspaceFolders": {
    "changeNotifications": true,
    "supported": true,
  },
}
`;

exports[`Capabilities Alignment Tests Client Capabilities Configuration should have consistent client capabilities configuration: client-capabilities-configuration 1`] = `
{
  "development": {
    "experimental": {
      "findMissingArtifactHandler": {
        "enabled": true,
        "supportedModes": [
          "blocking",
          "background",
        ],
      },
    },
    "general": {
      "markdown": {
        "parser": "marked",
        "version": "1.1.0",
      },
      "regularExpressions": {
        "engine": "ECMAScript",
        "version": "ES2020",
      },
    },
    "textDocument": {
      "completion": {
        "completionItem": {
          "commitCharactersSupport": true,
          "deprecatedSupport": true,
          "documentationFormat": [
            "markdown",
            "plaintext",
          ],
          "preselectSupport": true,
          "snippetSupport": true,
        },
        "completionItemKind": {
          "valueSet": [
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
            13,
            14,
            15,
            16,
            17,
            18,
            19,
            20,
            21,
            22,
            23,
            24,
            25,
          ],
        },
        "contextSupport": true,
        "dynamicRegistration": true,
      },
      "diagnostic": {
        "dynamicRegistration": true,
      },
      "documentSymbol": {
        "dynamicRegistration": true,
        "hierarchicalDocumentSymbolSupport": true,
        "symbolKind": {
          "valueSet": [
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
            13,
            14,
            15,
            16,
            17,
            18,
            19,
            20,
            21,
            22,
            23,
            24,
            25,
            26,
          ],
        },
      },
      "foldingRange": {
        "dynamicRegistration": true,
        "lineFoldingOnly": true,
        "rangeLimit": 5000,
      },
      "hover": {
        "contentFormat": [
          "markdown",
          "plaintext",
        ],
        "dynamicRegistration": true,
      },
      "publishDiagnostics": {
        "relatedInformation": true,
        "tagSupport": {
          "valueSet": [
            1,
            2,
          ],
        },
        "versionSupport": false,
      },
      "references": {
        "dynamicRegistration": true,
      },
      "synchronization": {
        "didSave": true,
        "dynamicRegistration": true,
        "willSave": true,
        "willSaveWaitUntil": true,
      },
    },
    "window": {
      "workDoneProgress": true,
    },
    "workspace": {
      "applyEdit": true,
      "configuration": true,
      "didChangeConfiguration": {
        "dynamicRegistration": true,
      },
      "didChangeWatchedFiles": {
        "dynamicRegistration": true,
      },
      "executeCommand": {
        "dynamicRegistration": true,
      },
      "symbol": {
        "dynamicRegistration": true,
        "symbolKind": {
          "valueSet": [
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
            13,
            14,
            15,
            16,
            17,
            18,
            19,
            20,
            21,
            22,
            23,
            24,
            25,
            26,
          ],
        },
      },
      "workspaceEdit": {
        "documentChanges": true,
        "failureHandling": "textOnlyTransactional",
        "resourceOperations": [
          "create",
          "rename",
          "delete",
        ],
      },
      "workspaceFolders": true,
    },
  },
  "production": {
    "experimental": {
      "findMissingArtifactHandler": {
        "enabled": true,
        "supportedModes": [
          "blocking",
          "background",
        ],
      },
    },
    "general": {
      "markdown": {
        "parser": "marked",
        "version": "1.1.0",
      },
      "regularExpressions": {
        "engine": "ECMAScript",
        "version": "ES2020",
      },
    },
    "textDocument": {
      "diagnostic": {
        "dynamicRegistration": true,
      },
      "documentSymbol": {
        "dynamicRegistration": true,
        "hierarchicalDocumentSymbolSupport": true,
        "symbolKind": {
          "valueSet": [
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
            13,
            14,
            15,
            16,
            17,
            18,
            19,
            20,
            21,
            22,
            23,
            24,
            25,
            26,
          ],
        },
      },
      "publishDiagnostics": {
        "relatedInformation": true,
        "tagSupport": {
          "valueSet": [
            1,
            2,
          ],
        },
        "versionSupport": false,
      },
      "synchronization": {
        "didSave": true,
        "dynamicRegistration": true,
        "willSave": true,
        "willSaveWaitUntil": true,
      },
    },
    "window": {
      "workDoneProgress": true,
    },
    "workspace": {
      "applyEdit": true,
      "configuration": true,
      "didChangeConfiguration": {
        "dynamicRegistration": true,
      },
      "didChangeWatchedFiles": {
        "dynamicRegistration": true,
      },
      "executeCommand": {
        "dynamicRegistration": true,
      },
      "symbol": {
        "dynamicRegistration": true,
        "symbolKind": {
          "valueSet": [
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            11,
            12,
            13,
            14,
            15,
            16,
            17,
            18,
            19,
            20,
            21,
            22,
            23,
            24,
            25,
            26,
          ],
        },
      },
      "workspaceEdit": {
        "documentChanges": true,
        "failureHandling": "textOnlyTransactional",
        "resourceOperations": [
          "create",
          "rename",
          "delete",
        ],
      },
      "workspaceFolders": true,
    },
  },
}
`;

exports[`Capabilities Alignment Tests Client Capabilities Configuration should have consistent development client capabilities: development-client-capabilities 1`] = `
{
  "experimental": {
    "findMissingArtifactHandler": {
      "enabled": true,
      "supportedModes": [
        "blocking",
        "background",
      ],
    },
  },
  "general": {
    "markdown": {
      "parser": "marked",
      "version": "1.1.0",
    },
    "regularExpressions": {
      "engine": "ECMAScript",
      "version": "ES2020",
    },
  },
  "textDocument": {
    "completion": {
      "completionItem": {
        "commitCharactersSupport": true,
        "deprecatedSupport": true,
        "documentationFormat": [
          "markdown",
          "plaintext",
        ],
        "preselectSupport": true,
        "snippetSupport": true,
      },
      "completionItemKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
        ],
      },
      "contextSupport": true,
      "dynamicRegistration": true,
    },
    "diagnostic": {
      "dynamicRegistration": true,
    },
    "documentSymbol": {
      "dynamicRegistration": true,
      "hierarchicalDocumentSymbolSupport": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "foldingRange": {
      "dynamicRegistration": true,
      "lineFoldingOnly": true,
      "rangeLimit": 5000,
    },
    "hover": {
      "contentFormat": [
        "markdown",
        "plaintext",
      ],
      "dynamicRegistration": true,
    },
    "publishDiagnostics": {
      "relatedInformation": true,
      "tagSupport": {
        "valueSet": [
          1,
          2,
        ],
      },
      "versionSupport": false,
    },
    "references": {
      "dynamicRegistration": true,
    },
    "synchronization": {
      "didSave": true,
      "dynamicRegistration": true,
      "willSave": true,
      "willSaveWaitUntil": true,
    },
  },
  "window": {
    "workDoneProgress": true,
  },
  "workspace": {
    "applyEdit": true,
    "configuration": true,
    "didChangeConfiguration": {
      "dynamicRegistration": true,
    },
    "didChangeWatchedFiles": {
      "dynamicRegistration": true,
    },
    "executeCommand": {
      "dynamicRegistration": true,
    },
    "symbol": {
      "dynamicRegistration": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "workspaceEdit": {
      "documentChanges": true,
      "failureHandling": "textOnlyTransactional",
      "resourceOperations": [
        "create",
        "rename",
        "delete",
      ],
    },
    "workspaceFolders": true,
  },
}
`;

exports[`Capabilities Alignment Tests Client Capabilities Configuration should have consistent production client capabilities: production-client-capabilities 1`] = `
{
  "experimental": {
    "findMissingArtifactHandler": {
      "enabled": true,
      "supportedModes": [
        "blocking",
        "background",
      ],
    },
  },
  "general": {
    "markdown": {
      "parser": "marked",
      "version": "1.1.0",
    },
    "regularExpressions": {
      "engine": "ECMAScript",
      "version": "ES2020",
    },
  },
  "textDocument": {
    "diagnostic": {
      "dynamicRegistration": true,
    },
    "documentSymbol": {
      "dynamicRegistration": true,
      "hierarchicalDocumentSymbolSupport": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "publishDiagnostics": {
      "relatedInformation": true,
      "tagSupport": {
        "valueSet": [
          1,
          2,
        ],
      },
      "versionSupport": false,
    },
    "synchronization": {
      "didSave": true,
      "dynamicRegistration": true,
      "willSave": true,
      "willSaveWaitUntil": true,
    },
  },
  "window": {
    "workDoneProgress": true,
  },
  "workspace": {
    "applyEdit": true,
    "configuration": true,
    "didChangeConfiguration": {
      "dynamicRegistration": true,
    },
    "didChangeWatchedFiles": {
      "dynamicRegistration": true,
    },
    "executeCommand": {
      "dynamicRegistration": true,
    },
    "symbol": {
      "dynamicRegistration": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "workspaceEdit": {
      "documentChanges": true,
      "failureHandling": "textOnlyTransactional",
      "resourceOperations": [
        "create",
        "rename",
        "delete",
      ],
    },
    "workspaceFolders": true,
  },
}
`;

exports[`Capabilities Alignment Tests Client Capabilities Configuration should return correct capabilities for development mode: development-client-capabilities-via-function 1`] = `
{
  "experimental": {
    "findMissingArtifactHandler": {
      "enabled": true,
      "supportedModes": [
        "blocking",
        "background",
      ],
    },
  },
  "general": {
    "markdown": {
      "parser": "marked",
      "version": "1.1.0",
    },
    "regularExpressions": {
      "engine": "ECMAScript",
      "version": "ES2020",
    },
  },
  "textDocument": {
    "completion": {
      "completionItem": {
        "commitCharactersSupport": true,
        "deprecatedSupport": true,
        "documentationFormat": [
          "markdown",
          "plaintext",
        ],
        "preselectSupport": true,
        "snippetSupport": true,
      },
      "completionItemKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
        ],
      },
      "contextSupport": true,
      "dynamicRegistration": true,
    },
    "diagnostic": {
      "dynamicRegistration": true,
    },
    "documentSymbol": {
      "dynamicRegistration": true,
      "hierarchicalDocumentSymbolSupport": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "foldingRange": {
      "dynamicRegistration": true,
      "lineFoldingOnly": true,
      "rangeLimit": 5000,
    },
    "hover": {
      "contentFormat": [
        "markdown",
        "plaintext",
      ],
      "dynamicRegistration": true,
    },
    "publishDiagnostics": {
      "relatedInformation": true,
      "tagSupport": {
        "valueSet": [
          1,
          2,
        ],
      },
      "versionSupport": false,
    },
    "references": {
      "dynamicRegistration": true,
    },
    "synchronization": {
      "didSave": true,
      "dynamicRegistration": true,
      "willSave": true,
      "willSaveWaitUntil": true,
    },
  },
  "window": {
    "workDoneProgress": true,
  },
  "workspace": {
    "applyEdit": true,
    "configuration": true,
    "didChangeConfiguration": {
      "dynamicRegistration": true,
    },
    "didChangeWatchedFiles": {
      "dynamicRegistration": true,
    },
    "executeCommand": {
      "dynamicRegistration": true,
    },
    "symbol": {
      "dynamicRegistration": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "workspaceEdit": {
      "documentChanges": true,
      "failureHandling": "textOnlyTransactional",
      "resourceOperations": [
        "create",
        "rename",
        "delete",
      ],
    },
    "workspaceFolders": true,
  },
}
`;

exports[`Capabilities Alignment Tests Client Capabilities Configuration should return correct capabilities for production mode: production-client-capabilities-via-function 1`] = `
{
  "experimental": {
    "findMissingArtifactHandler": {
      "enabled": true,
      "supportedModes": [
        "blocking",
        "background",
      ],
    },
  },
  "general": {
    "markdown": {
      "parser": "marked",
      "version": "1.1.0",
    },
    "regularExpressions": {
      "engine": "ECMAScript",
      "version": "ES2020",
    },
  },
  "textDocument": {
    "diagnostic": {
      "dynamicRegistration": true,
    },
    "documentSymbol": {
      "dynamicRegistration": true,
      "hierarchicalDocumentSymbolSupport": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "publishDiagnostics": {
      "relatedInformation": true,
      "tagSupport": {
        "valueSet": [
          1,
          2,
        ],
      },
      "versionSupport": false,
    },
    "synchronization": {
      "didSave": true,
      "dynamicRegistration": true,
      "willSave": true,
      "willSaveWaitUntil": true,
    },
  },
  "window": {
    "workDoneProgress": true,
  },
  "workspace": {
    "applyEdit": true,
    "configuration": true,
    "didChangeConfiguration": {
      "dynamicRegistration": true,
    },
    "didChangeWatchedFiles": {
      "dynamicRegistration": true,
    },
    "executeCommand": {
      "dynamicRegistration": true,
    },
    "symbol": {
      "dynamicRegistration": true,
      "symbolKind": {
        "valueSet": [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
        ],
      },
    },
    "workspaceEdit": {
      "documentChanges": true,
      "failureHandling": "textOnlyTransactional",
      "resourceOperations": [
        "create",
        "rename",
        "delete",
      ],
    },
    "workspaceFolders": true,
  },
}
`;

exports[`Capabilities Alignment Tests Configuration Consistency should have consistent mode detection: mode-detection-consistency 1`] = `
[
  {
    "expectedClient": {
      "experimental": {
        "findMissingArtifactHandler": {
          "enabled": true,
          "supportedModes": [
            "blocking",
            "background",
          ],
        },
      },
      "general": {
        "markdown": {
          "parser": "marked",
          "version": "1.1.0",
        },
        "regularExpressions": {
          "engine": "ECMAScript",
          "version": "ES2020",
        },
      },
      "textDocument": {
        "diagnostic": {
          "dynamicRegistration": true,
        },
        "documentSymbol": {
          "dynamicRegistration": true,
          "hierarchicalDocumentSymbolSupport": true,
          "symbolKind": {
            "valueSet": [
              1,
              2,
              3,
              4,
              5,
              6,
              7,
              8,
              9,
              10,
              11,
              12,
              13,
              14,
              15,
              16,
              17,
              18,
              19,
              20,
              21,
              22,
              23,
              24,
              25,
              26,
            ],
          },
        },
        "publishDiagnostics": {
          "relatedInformation": true,
          "tagSupport": {
            "valueSet": [
              1,
              2,
            ],
          },
          "versionSupport": false,
        },
        "synchronization": {
          "didSave": true,
          "dynamicRegistration": true,
          "willSave": true,
          "willSaveWaitUntil": true,
        },
      },
      "window": {
        "workDoneProgress": true,
      },
      "workspace": {
        "applyEdit": true,
        "configuration": true,
        "didChangeConfiguration": {
          "dynamicRegistration": true,
        },
        "didChangeWatchedFiles": {
          "dynamicRegistration": true,
        },
        "executeCommand": {
          "dynamicRegistration": true,
        },
        "symbol": {
          "dynamicRegistration": true,
          "symbolKind": {
            "valueSet": [
              1,
              2,
              3,
              4,
              5,
              6,
              7,
              8,
              9,
              10,
              11,
              12,
              13,
              14,
              15,
              16,
              17,
              18,
              19,
              20,
              21,
              22,
              23,
              24,
              25,
              26,
            ],
          },
        },
        "workspaceEdit": {
          "documentChanges": true,
          "failureHandling": "textOnlyTransactional",
          "resourceOperations": [
            "create",
            "rename",
            "delete",
          ],
        },
        "workspaceFolders": true,
      },
    },
    "expectedServer": {
      "callHierarchyProvider": undefined,
      "codeActionProvider": undefined,
      "codeLensProvider": {
        "resolveProvider": false,
      },
      "colorProvider": undefined,
      "completionProvider": undefined,
      "declarationProvider": undefined,
      "definitionProvider": undefined,
      "diagnosticProvider": {
        "identifier": "apex-ls-ts",
        "interFileDependencies": false,
        "workspaceDiagnostics": false,
      },
      "documentFormattingProvider": undefined,
      "documentHighlightProvider": undefined,
      "documentLinkProvider": undefined,
      "documentOnTypeFormattingProvider": undefined,
      "documentRangeFormattingProvider": undefined,
      "documentSymbolProvider": true,
      "executeCommandProvider": undefined,
      "experimental": {
        "findMissingArtifactProvider": {
          "enabled": false,
          "maxCandidatesToOpen": 3,
          "supportedModes": [
            "blocking",
            "background",
          ],
          "timeoutMsHint": 1500,
        },
      },
      "foldingRangeProvider": false,
      "hoverProvider": undefined,
      "implementationProvider": undefined,
      "inlayHintProvider": undefined,
      "inlineCompletionProvider": undefined,
      "inlineValueProvider": undefined,
      "linkedEditingRangeProvider": undefined,
      "monikerProvider": undefined,
      "publishDiagnostics": false,
      "referencesProvider": true,
      "renameProvider": undefined,
      "selectionRangeProvider": undefined,
      "semanticTokensProvider": undefined,
      "signatureHelpProvider": undefined,
      "textDocumentSync": {
        "change": 1,
        "openClose": true,
        "save": true,
        "willSave": false,
        "willSaveWaitUntil": false,
      },
      "typeDefinitionProvider": undefined,
      "typeHierarchyProvider": undefined,
      "workspace": {
        "workspaceFolders": {
          "changeNotifications": true,
          "supported": true,
        },
      },
      "workspaceSymbolProvider": undefined,
    },
    "mode": "production",
  },
  {
    "expectedClient": {
      "experimental": {
        "findMissingArtifactHandler": {
          "enabled": true,
          "supportedModes": [
            "blocking",
            "background",
          ],
        },
      },
      "general": {
        "markdown": {
          "parser": "marked",
          "version": "1.1.0",
        },
        "regularExpressions": {
          "engine": "ECMAScript",
          "version": "ES2020",
        },
      },
      "textDocument": {
        "completion": {
          "completionItem": {
            "commitCharactersSupport": true,
            "deprecatedSupport": true,
            "documentationFormat": [
              "markdown",
              "plaintext",
            ],
            "preselectSupport": true,
            "snippetSupport": true,
          },
          "completionItemKind": {
            "valueSet": [
              1,
              2,
              3,
              4,
              5,
              6,
              7,
              8,
              9,
              10,
              11,
              12,
              13,
              14,
              15,
              16,
              17,
              18,
              19,
              20,
              21,
              22,
              23,
              24,
              25,
            ],
          },
          "contextSupport": true,
          "dynamicRegistration": true,
        },
        "diagnostic": {
          "dynamicRegistration": true,
        },
        "documentSymbol": {
          "dynamicRegistration": true,
          "hierarchicalDocumentSymbolSupport": true,
          "symbolKind": {
            "valueSet": [
              1,
              2,
              3,
              4,
              5,
              6,
              7,
              8,
              9,
              10,
              11,
              12,
              13,
              14,
              15,
              16,
              17,
              18,
              19,
              20,
              21,
              22,
              23,
              24,
              25,
              26,
            ],
          },
        },
        "foldingRange": {
          "dynamicRegistration": true,
          "lineFoldingOnly": true,
          "rangeLimit": 5000,
        },
        "hover": {
          "contentFormat": [
            "markdown",
            "plaintext",
          ],
          "dynamicRegistration": true,
        },
        "publishDiagnostics": {
          "relatedInformation": true,
          "tagSupport": {
            "valueSet": [
              1,
              2,
            ],
          },
          "versionSupport": false,
        },
        "references": {
          "dynamicRegistration": true,
        },
        "synchronization": {
          "didSave": true,
          "dynamicRegistration": true,
          "willSave": true,
          "willSaveWaitUntil": true,
        },
      },
      "window": {
        "workDoneProgress": true,
      },
      "workspace": {
        "applyEdit": true,
        "configuration": true,
        "didChangeConfiguration": {
          "dynamicRegistration": true,
        },
        "didChangeWatchedFiles": {
          "dynamicRegistration": true,
        },
        "executeCommand": {
          "dynamicRegistration": true,
        },
        "symbol": {
          "dynamicRegistration": true,
          "symbolKind": {
            "valueSet": [
              1,
              2,
              3,
              4,
              5,
              6,
              7,
              8,
              9,
              10,
              11,
              12,
              13,
              14,
              15,
              16,
              17,
              18,
              19,
              20,
              21,
              22,
              23,
              24,
              25,
              26,
            ],
          },
        },
        "workspaceEdit": {
          "documentChanges": true,
          "failureHandling": "textOnlyTransactional",
          "resourceOperations": [
            "create",
            "rename",
            "delete",
          ],
        },
        "workspaceFolders": true,
      },
    },
    "expectedServer": {
      "callHierarchyProvider": undefined,
      "codeActionProvider": undefined,
      "codeLensProvider": {
        "resolveProvider": false,
      },
      "colorProvider": undefined,
      "completionProvider": {
        "resolveProvider": false,
        "triggerCharacters": [
          ".",
        ],
      },
      "declarationProvider": undefined,
      "definitionProvider": true,
      "diagnosticProvider": {
        "identifier": "apex-ls-ts",
        "interFileDependencies": true,
        "workspaceDiagnostics": false,
      },
      "documentFormattingProvider": undefined,
      "documentHighlightProvider": undefined,
      "documentLinkProvider": undefined,
      "documentOnTypeFormattingProvider": undefined,
      "documentRangeFormattingProvider": undefined,
      "documentSymbolProvider": true,
      "executeCommandProvider": undefined,
      "experimental": {
        "findMissingArtifactProvider": {
          "enabled": true,
          "maxCandidatesToOpen": 3,
          "supportedModes": [
            "blocking",
            "background",
          ],
          "timeoutMsHint": 2000,
        },
      },
      "foldingRangeProvider": true,
      "hoverProvider": true,
      "implementationProvider": undefined,
      "inlayHintProvider": undefined,
      "inlineCompletionProvider": undefined,
      "inlineValueProvider": undefined,
      "linkedEditingRangeProvider": undefined,
      "monikerProvider": undefined,
      "publishDiagnostics": true,
      "referencesProvider": true,
      "renameProvider": undefined,
      "selectionRangeProvider": undefined,
      "semanticTokensProvider": undefined,
      "signatureHelpProvider": undefined,
      "textDocumentSync": {
        "change": 1,
        "openClose": true,
        "save": true,
        "willSave": false,
        "willSaveWaitUntil": false,
      },
      "typeDefinitionProvider": undefined,
      "typeHierarchyProvider": undefined,
      "workspace": {
        "workspaceFolders": {
          "changeNotifications": true,
          "supported": true,
        },
      },
      "workspaceSymbolProvider": undefined,
    },
    "mode": "development",
  },
]
`;

exports[`Capabilities Alignment Tests Configuration Consistency should maintain consistent configuration structure: full-configuration-comparison 1`] = `
{
  "clientCapabilities": {
    "development": {
      "experimental": {
        "findMissingArtifactHandler": {
          "enabled": true,
          "supportedModes": [
            "blocking",
            "background",
          ],
        },
      },
      "general": {
        "markdown": {
          "parser": "marked",
          "version": "1.1.0",
        },
        "regularExpressions": {
          "engine": "ECMAScript",
          "version": "ES2020",
        },
      },
      "textDocument": {
        "completion": {
          "completionItem": {
            "commitCharactersSupport": true,
            "deprecatedSupport": true,
            "documentationFormat": [
              "markdown",
              "plaintext",
            ],
            "preselectSupport": true,
            "snippetSupport": true,
          },
          "completionItemKind": {
            "valueSet": [
              1,
              2,
              3,
              4,
              5,
              6,
              7,
              8,
              9,
              10,
              11,
              12,
              13,
              14,
              15,
              16,
              17,
              18,
              19,
              20,
              21,
              22,
              23,
              24,
              25,
            ],
          },
          "contextSupport": true,
          "dynamicRegistration": true,
        },
        "diagnostic": {
          "dynamicRegistration": true,
        },
        "documentSymbol": {
          "dynamicRegistration": true,
          "hierarchicalDocumentSymbolSupport": true,
          "symbolKind": {
            "valueSet": [
              1,
              2,
              3,
              4,
              5,
              6,
              7,
              8,
              9,
              10,
              11,
              12,
              13,
              14,
              15,
              16,
              17,
              18,
              19,
              20,
              21,
              22,
              23,
              24,
              25,
              26,
            ],
          },
        },
        "foldingRange": {
          "dynamicRegistration": true,
          "lineFoldingOnly": true,
          "rangeLimit": 5000,
        },
        "hover": {
          "contentFormat": [
            "markdown",
            "plaintext",
          ],
          "dynamicRegistration": true,
        },
        "publishDiagnostics": {
          "relatedInformation": true,
          "tagSupport": {
            "valueSet": [
              1,
              2,
            ],
          },
          "versionSupport": false,
        },
        "references": {
          "dynamicRegistration": true,
        },
        "synchronization": {
          "didSave": true,
          "dynamicRegistration": true,
          "willSave": true,
          "willSaveWaitUntil": true,
        },
      },
      "window": {
        "workDoneProgress": true,
      },
      "workspace": {
        "applyEdit": true,
        "configuration": true,
        "didChangeConfiguration": {
          "dynamicRegistration": true,
        },
        "didChangeWatchedFiles": {
          "dynamicRegistration": true,
        },
        "executeCommand": {
          "dynamicRegistration": true,
        },
        "symbol": {
          "dynamicRegistration": true,
          "symbolKind": {
            "valueSet": [
              1,
              2,
              3,
              4,
              5,
              6,
              7,
              8,
              9,
              10,
              11,
              12,
              13,
              14,
              15,
              16,
              17,
              18,
              19,
              20,
              21,
              22,
              23,
              24,
              25,
              26,
            ],
          },
        },
        "workspaceEdit": {
          "documentChanges": true,
          "failureHandling": "textOnlyTransactional",
          "resourceOperations": [
            "create",
            "rename",
            "delete",
          ],
        },
        "workspaceFolders": true,
      },
    },
    "production": {
      "experimental": {
        "findMissingArtifactHandler": {
          "enabled": true,
          "supportedModes": [
            "blocking",
            "background",
          ],
        },
      },
      "general": {
        "markdown": {
          "parser": "marked",
          "version": "1.1.0",
        },
        "regularExpressions": {
          "engine": "ECMAScript",
          "version": "ES2020",
        },
      },
      "textDocument": {
        "diagnostic": {
          "dynamicRegistration": true,
        },
        "documentSymbol": {
          "dynamicRegistration": true,
          "hierarchicalDocumentSymbolSupport": true,
          "symbolKind": {
            "valueSet": [
              1,
              2,
              3,
              4,
              5,
              6,
              7,
              8,
              9,
              10,
              11,
              12,
              13,
              14,
              15,
              16,
              17,
              18,
              19,
              20,
              21,
              22,
              23,
              24,
              25,
              26,
            ],
          },
        },
        "publishDiagnostics": {
          "relatedInformation": true,
          "tagSupport": {
            "valueSet": [
              1,
              2,
            ],
          },
          "versionSupport": false,
        },
        "synchronization": {
          "didSave": true,
          "dynamicRegistration": true,
          "willSave": true,
          "willSaveWaitUntil": true,
        },
      },
      "window": {
        "workDoneProgress": true,
      },
      "workspace": {
        "applyEdit": true,
        "configuration": true,
        "didChangeConfiguration": {
          "dynamicRegistration": true,
        },
        "didChangeWatchedFiles": {
          "dynamicRegistration": true,
        },
        "executeCommand": {
          "dynamicRegistration": true,
        },
        "symbol": {
          "dynamicRegistration": true,
          "symbolKind": {
            "valueSet": [
              1,
              2,
              3,
              4,
              5,
              6,
              7,
              8,
              9,
              10,
              11,
              12,
              13,
              14,
              15,
              16,
              17,
              18,
              19,
              20,
              21,
              22,
              23,
              24,
              25,
              26,
            ],
          },
        },
        "workspaceEdit": {
          "documentChanges": true,
          "failureHandling": "textOnlyTransactional",
          "resourceOperations": [
            "create",
            "rename",
            "delete",
          ],
        },
        "workspaceFolders": true,
      },
    },
  },
  "configurations": {
    "client": {
      "development": {
        "experimental": {
          "findMissingArtifactHandler": {
            "enabled": true,
            "supportedModes": [
              "blocking",
              "background",
            ],
          },
        },
        "general": {
          "markdown": {
            "parser": "marked",
            "version": "1.1.0",
          },
          "regularExpressions": {
            "engine": "ECMAScript",
            "version": "ES2020",
          },
        },
        "textDocument": {
          "completion": {
            "completionItem": {
              "commitCharactersSupport": true,
              "deprecatedSupport": true,
              "documentationFormat": [
                "markdown",
                "plaintext",
              ],
              "preselectSupport": true,
              "snippetSupport": true,
            },
            "completionItemKind": {
              "valueSet": [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
                20,
                21,
                22,
                23,
                24,
                25,
              ],
            },
            "contextSupport": true,
            "dynamicRegistration": true,
          },
          "diagnostic": {
            "dynamicRegistration": true,
          },
          "documentSymbol": {
            "dynamicRegistration": true,
            "hierarchicalDocumentSymbolSupport": true,
            "symbolKind": {
              "valueSet": [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
                20,
                21,
                22,
                23,
                24,
                25,
                26,
              ],
            },
          },
          "foldingRange": {
            "dynamicRegistration": true,
            "lineFoldingOnly": true,
            "rangeLimit": 5000,
          },
          "hover": {
            "contentFormat": [
              "markdown",
              "plaintext",
            ],
            "dynamicRegistration": true,
          },
          "publishDiagnostics": {
            "relatedInformation": true,
            "tagSupport": {
              "valueSet": [
                1,
                2,
              ],
            },
            "versionSupport": false,
          },
          "references": {
            "dynamicRegistration": true,
          },
          "synchronization": {
            "didSave": true,
            "dynamicRegistration": true,
            "willSave": true,
            "willSaveWaitUntil": true,
          },
        },
        "window": {
          "workDoneProgress": true,
        },
        "workspace": {
          "applyEdit": true,
          "configuration": true,
          "didChangeConfiguration": {
            "dynamicRegistration": true,
          },
          "didChangeWatchedFiles": {
            "dynamicRegistration": true,
          },
          "executeCommand": {
            "dynamicRegistration": true,
          },
          "symbol": {
            "dynamicRegistration": true,
            "symbolKind": {
              "valueSet": [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
                20,
                21,
                22,
                23,
                24,
                25,
                26,
              ],
            },
          },
          "workspaceEdit": {
            "documentChanges": true,
            "failureHandling": "textOnlyTransactional",
            "resourceOperations": [
              "create",
              "rename",
              "delete",
            ],
          },
          "workspaceFolders": true,
        },
      },
      "production": {
        "experimental": {
          "findMissingArtifactHandler": {
            "enabled": true,
            "supportedModes": [
              "blocking",
              "background",
            ],
          },
        },
        "general": {
          "markdown": {
            "parser": "marked",
            "version": "1.1.0",
          },
          "regularExpressions": {
            "engine": "ECMAScript",
            "version": "ES2020",
          },
        },
        "textDocument": {
          "diagnostic": {
            "dynamicRegistration": true,
          },
          "documentSymbol": {
            "dynamicRegistration": true,
            "hierarchicalDocumentSymbolSupport": true,
            "symbolKind": {
              "valueSet": [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
                20,
                21,
                22,
                23,
                24,
                25,
                26,
              ],
            },
          },
          "publishDiagnostics": {
            "relatedInformation": true,
            "tagSupport": {
              "valueSet": [
                1,
                2,
              ],
            },
            "versionSupport": false,
          },
          "synchronization": {
            "didSave": true,
            "dynamicRegistration": true,
            "willSave": true,
            "willSaveWaitUntil": true,
          },
        },
        "window": {
          "workDoneProgress": true,
        },
        "workspace": {
          "applyEdit": true,
          "configuration": true,
          "didChangeConfiguration": {
            "dynamicRegistration": true,
          },
          "didChangeWatchedFiles": {
            "dynamicRegistration": true,
          },
          "executeCommand": {
            "dynamicRegistration": true,
          },
          "symbol": {
            "dynamicRegistration": true,
            "symbolKind": {
              "valueSet": [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
                20,
                21,
                22,
                23,
                24,
                25,
                26,
              ],
            },
          },
          "workspaceEdit": {
            "documentChanges": true,
            "failureHandling": "textOnlyTransactional",
            "resourceOperations": [
              "create",
              "rename",
              "delete",
            ],
          },
          "workspaceFolders": true,
        },
      },
    },
    "server": {
      "development": {
        "callHierarchyProvider": undefined,
        "codeActionProvider": undefined,
        "codeLensProvider": {
          "resolveProvider": false,
        },
        "colorProvider": undefined,
        "completionProvider": {
          "resolveProvider": false,
          "triggerCharacters": [
            ".",
          ],
        },
        "declarationProvider": undefined,
        "definitionProvider": true,
        "diagnosticProvider": {
          "identifier": "apex-ls-ts",
          "interFileDependencies": true,
          "workspaceDiagnostics": false,
        },
        "documentFormattingProvider": undefined,
        "documentHighlightProvider": undefined,
        "documentLinkProvider": undefined,
        "documentOnTypeFormattingProvider": undefined,
        "documentRangeFormattingProvider": undefined,
        "documentSymbolProvider": true,
        "executeCommandProvider": undefined,
        "experimental": {
          "findMissingArtifactProvider": {
            "enabled": true,
            "maxCandidatesToOpen": 3,
            "supportedModes": [
              "blocking",
              "background",
            ],
            "timeoutMsHint": 2000,
          },
        },
        "foldingRangeProvider": true,
        "hoverProvider": true,
        "implementationProvider": undefined,
        "inlayHintProvider": undefined,
        "inlineCompletionProvider": undefined,
        "inlineValueProvider": undefined,
        "linkedEditingRangeProvider": undefined,
        "monikerProvider": undefined,
        "publishDiagnostics": true,
        "referencesProvider": true,
        "renameProvider": undefined,
        "selectionRangeProvider": undefined,
        "semanticTokensProvider": undefined,
        "signatureHelpProvider": undefined,
        "textDocumentSync": {
          "change": 1,
          "openClose": true,
          "save": true,
          "willSave": false,
          "willSaveWaitUntil": false,
        },
        "typeDefinitionProvider": undefined,
        "typeHierarchyProvider": undefined,
        "workspace": {
          "workspaceFolders": {
            "changeNotifications": true,
            "supported": true,
          },
        },
        "workspaceSymbolProvider": undefined,
      },
      "production": {
        "callHierarchyProvider": undefined,
        "codeActionProvider": undefined,
        "codeLensProvider": {
          "resolveProvider": false,
        },
        "colorProvider": undefined,
        "completionProvider": undefined,
        "declarationProvider": undefined,
        "definitionProvider": undefined,
        "diagnosticProvider": {
          "identifier": "apex-ls-ts",
          "interFileDependencies": false,
          "workspaceDiagnostics": false,
        },
        "documentFormattingProvider": undefined,
        "documentHighlightProvider": undefined,
        "documentLinkProvider": undefined,
        "documentOnTypeFormattingProvider": undefined,
        "documentRangeFormattingProvider": undefined,
        "documentSymbolProvider": true,
        "executeCommandProvider": undefined,
        "experimental": {
          "findMissingArtifactProvider": {
            "enabled": false,
            "maxCandidatesToOpen": 3,
            "supportedModes": [
              "blocking",
              "background",
            ],
            "timeoutMsHint": 1500,
          },
        },
        "foldingRangeProvider": false,
        "hoverProvider": undefined,
        "implementationProvider": undefined,
        "inlayHintProvider": undefined,
        "inlineCompletionProvider": undefined,
        "inlineValueProvider": undefined,
        "linkedEditingRangeProvider": undefined,
        "monikerProvider": undefined,
        "publishDiagnostics": false,
        "referencesProvider": true,
        "renameProvider": undefined,
        "selectionRangeProvider": undefined,
        "semanticTokensProvider": undefined,
        "signatureHelpProvider": undefined,
        "textDocumentSync": {
          "change": 1,
          "openClose": true,
          "save": true,
          "willSave": false,
          "willSaveWaitUntil": false,
        },
        "typeDefinitionProvider": undefined,
        "typeHierarchyProvider": undefined,
        "workspace": {
          "workspaceFolders": {
            "changeNotifications": true,
            "supported": true,
          },
        },
        "workspaceSymbolProvider": undefined,
      },
    },
  },
  "serverCapabilities": {
    "development": {
      "callHierarchyProvider": undefined,
      "codeActionProvider": undefined,
      "codeLensProvider": {
        "resolveProvider": false,
      },
      "colorProvider": undefined,
      "completionProvider": {
        "resolveProvider": false,
        "triggerCharacters": [
          ".",
        ],
      },
      "declarationProvider": undefined,
      "definitionProvider": true,
      "diagnosticProvider": {
        "identifier": "apex-ls-ts",
        "interFileDependencies": true,
        "workspaceDiagnostics": false,
      },
      "documentFormattingProvider": undefined,
      "documentHighlightProvider": undefined,
      "documentLinkProvider": undefined,
      "documentOnTypeFormattingProvider": undefined,
      "documentRangeFormattingProvider": undefined,
      "documentSymbolProvider": true,
      "executeCommandProvider": undefined,
      "experimental": {
        "findMissingArtifactProvider": {
          "enabled": true,
          "maxCandidatesToOpen": 3,
          "supportedModes": [
            "blocking",
            "background",
          ],
          "timeoutMsHint": 2000,
        },
      },
      "foldingRangeProvider": true,
      "hoverProvider": true,
      "implementationProvider": undefined,
      "inlayHintProvider": undefined,
      "inlineCompletionProvider": undefined,
      "inlineValueProvider": undefined,
      "linkedEditingRangeProvider": undefined,
      "monikerProvider": undefined,
      "publishDiagnostics": true,
      "referencesProvider": true,
      "renameProvider": undefined,
      "selectionRangeProvider": undefined,
      "semanticTokensProvider": undefined,
      "signatureHelpProvider": undefined,
      "textDocumentSync": {
        "change": 1,
        "openClose": true,
        "save": true,
        "willSave": false,
        "willSaveWaitUntil": false,
      },
      "typeDefinitionProvider": undefined,
      "typeHierarchyProvider": undefined,
      "workspace": {
        "workspaceFolders": {
          "changeNotifications": true,
          "supported": true,
        },
      },
      "workspaceSymbolProvider": undefined,
    },
    "production": {
      "callHierarchyProvider": undefined,
      "codeActionProvider": undefined,
      "codeLensProvider": {
        "resolveProvider": false,
      },
      "colorProvider": undefined,
      "completionProvider": undefined,
      "declarationProvider": undefined,
      "definitionProvider": undefined,
      "diagnosticProvider": {
        "identifier": "apex-ls-ts",
        "interFileDependencies": false,
        "workspaceDiagnostics": false,
      },
      "documentFormattingProvider": undefined,
      "documentHighlightProvider": undefined,
      "documentLinkProvider": undefined,
      "documentOnTypeFormattingProvider": undefined,
      "documentRangeFormattingProvider": undefined,
      "documentSymbolProvider": true,
      "executeCommandProvider": undefined,
      "experimental": {
        "findMissingArtifactProvider": {
          "enabled": false,
          "maxCandidatesToOpen": 3,
          "supportedModes": [
            "blocking",
            "background",
          ],
          "timeoutMsHint": 1500,
        },
      },
      "foldingRangeProvider": false,
      "hoverProvider": undefined,
      "implementationProvider": undefined,
      "inlayHintProvider": undefined,
      "inlineCompletionProvider": undefined,
      "inlineValueProvider": undefined,
      "linkedEditingRangeProvider": undefined,
      "monikerProvider": undefined,
      "publishDiagnostics": false,
      "referencesProvider": true,
      "renameProvider": undefined,
      "selectionRangeProvider": undefined,
      "semanticTokensProvider": undefined,
      "signatureHelpProvider": undefined,
      "textDocumentSync": {
        "change": 1,
        "openClose": true,
        "save": true,
        "willSave": false,
        "willSaveWaitUntil": false,
      },
      "typeDefinitionProvider": undefined,
      "typeHierarchyProvider": undefined,
      "workspace": {
        "workspaceFolders": {
          "changeNotifications": true,
          "supported": true,
        },
      },
      "workspaceSymbolProvider": undefined,
    },
  },
}
`;

exports[`Capabilities Alignment Tests Dynamic Registration Alignment should have consistent document selectors between client and server: document-selectors-alignment 1`] = `
[
  {
    "language": "apex",
    "scheme": "file",
  },
  {
    "language": "apex",
    "scheme": "vscode-test-web",
  },
]
`;

exports[`Capabilities Alignment Tests Dynamic Registration Alignment should have consistent dynamic registration support: dynamic-registration-alignment 1`] = `
{
  "development": {
    "dynamicRegistration": {
      "textDocument": {
        "completion": true,
        "documentSymbol": true,
        "foldingRange": true,
        "hover": true,
        "synchronization": true,
      },
      "workspace": {
        "didChangeConfiguration": true,
        "didChangeWatchedFiles": true,
        "executeCommand": true,
        "symbol": true,
      },
    },
  },
  "production": {
    "dynamicRegistration": {
      "textDocument": {
        "completion": undefined,
        "documentSymbol": true,
        "foldingRange": undefined,
        "hover": undefined,
        "synchronization": true,
      },
      "workspace": {
        "didChangeConfiguration": true,
        "didChangeWatchedFiles": true,
        "executeCommand": true,
        "symbol": true,
      },
    },
  },
}
`;

exports[`Capabilities Alignment Tests Server Capabilities Configuration should have consistent capabilities configuration: server-capabilities-configuration 1`] = `
{
  "development": {
    "callHierarchyProvider": undefined,
    "codeActionProvider": undefined,
    "codeLensProvider": {
      "resolveProvider": false,
    },
    "colorProvider": undefined,
    "completionProvider": {
      "resolveProvider": false,
      "triggerCharacters": [
        ".",
      ],
    },
    "declarationProvider": undefined,
    "definitionProvider": true,
    "diagnosticProvider": {
      "identifier": "apex-ls-ts",
      "interFileDependencies": true,
      "workspaceDiagnostics": false,
    },
    "documentFormattingProvider": undefined,
    "documentHighlightProvider": undefined,
    "documentLinkProvider": undefined,
    "documentOnTypeFormattingProvider": undefined,
    "documentRangeFormattingProvider": undefined,
    "documentSymbolProvider": true,
    "executeCommandProvider": undefined,
    "experimental": {
      "findMissingArtifactProvider": {
        "enabled": true,
        "maxCandidatesToOpen": 3,
        "supportedModes": [
          "blocking",
          "background",
        ],
        "timeoutMsHint": 2000,
      },
    },
    "foldingRangeProvider": true,
    "hoverProvider": true,
    "implementationProvider": undefined,
    "inlayHintProvider": undefined,
    "inlineCompletionProvider": undefined,
    "inlineValueProvider": undefined,
    "linkedEditingRangeProvider": undefined,
    "monikerProvider": undefined,
    "publishDiagnostics": true,
    "referencesProvider": true,
    "renameProvider": undefined,
    "selectionRangeProvider": undefined,
    "semanticTokensProvider": undefined,
    "signatureHelpProvider": undefined,
    "textDocumentSync": {
      "change": 1,
      "openClose": true,
      "save": true,
      "willSave": false,
      "willSaveWaitUntil": false,
    },
    "typeDefinitionProvider": undefined,
    "typeHierarchyProvider": undefined,
    "workspace": {
      "workspaceFolders": {
        "changeNotifications": true,
        "supported": true,
      },
    },
    "workspaceSymbolProvider": undefined,
  },
  "production": {
    "callHierarchyProvider": undefined,
    "codeActionProvider": undefined,
    "codeLensProvider": {
      "resolveProvider": false,
    },
    "colorProvider": undefined,
    "completionProvider": undefined,
    "declarationProvider": undefined,
    "definitionProvider": undefined,
    "diagnosticProvider": {
      "identifier": "apex-ls-ts",
      "interFileDependencies": false,
      "workspaceDiagnostics": false,
    },
    "documentFormattingProvider": undefined,
    "documentHighlightProvider": undefined,
    "documentLinkProvider": undefined,
    "documentOnTypeFormattingProvider": undefined,
    "documentRangeFormattingProvider": undefined,
    "documentSymbolProvider": true,
    "executeCommandProvider": undefined,
    "experimental": {
      "findMissingArtifactProvider": {
        "enabled": false,
        "maxCandidatesToOpen": 3,
        "supportedModes": [
          "blocking",
          "background",
        ],
        "timeoutMsHint": 1500,
      },
    },
    "foldingRangeProvider": false,
    "hoverProvider": undefined,
    "implementationProvider": undefined,
    "inlayHintProvider": undefined,
    "inlineCompletionProvider": undefined,
    "inlineValueProvider": undefined,
    "linkedEditingRangeProvider": undefined,
    "monikerProvider": undefined,
    "publishDiagnostics": false,
    "referencesProvider": true,
    "renameProvider": undefined,
    "selectionRangeProvider": undefined,
    "semanticTokensProvider": undefined,
    "signatureHelpProvider": undefined,
    "textDocumentSync": {
      "change": 1,
      "openClose": true,
      "save": true,
      "willSave": false,
      "willSaveWaitUntil": false,
    },
    "typeDefinitionProvider": undefined,
    "typeHierarchyProvider": undefined,
    "workspace": {
      "workspaceFolders": {
        "changeNotifications": true,
        "supported": true,
      },
    },
    "workspaceSymbolProvider": undefined,
  },
}
`;

exports[`Capabilities Alignment Tests Server Capabilities Configuration should have consistent development capabilities: development-server-capabilities 1`] = `
{
  "callHierarchyProvider": undefined,
  "codeActionProvider": undefined,
  "codeLensProvider": {
    "resolveProvider": false,
  },
  "colorProvider": undefined,
  "completionProvider": {
    "resolveProvider": false,
    "triggerCharacters": [
      ".",
    ],
  },
  "declarationProvider": undefined,
  "definitionProvider": true,
  "diagnosticProvider": {
    "identifier": "apex-ls-ts",
    "interFileDependencies": true,
    "workspaceDiagnostics": false,
  },
  "documentFormattingProvider": undefined,
  "documentHighlightProvider": undefined,
  "documentLinkProvider": undefined,
  "documentOnTypeFormattingProvider": undefined,
  "documentRangeFormattingProvider": undefined,
  "documentSymbolProvider": true,
  "executeCommandProvider": undefined,
  "experimental": {
    "findMissingArtifactProvider": {
      "enabled": true,
      "maxCandidatesToOpen": 3,
      "supportedModes": [
        "blocking",
        "background",
      ],
      "timeoutMsHint": 2000,
    },
  },
  "foldingRangeProvider": true,
  "hoverProvider": true,
  "implementationProvider": undefined,
  "inlayHintProvider": undefined,
  "inlineCompletionProvider": undefined,
  "inlineValueProvider": undefined,
  "linkedEditingRangeProvider": undefined,
  "monikerProvider": undefined,
  "publishDiagnostics": true,
  "referencesProvider": true,
  "renameProvider": undefined,
  "selectionRangeProvider": undefined,
  "semanticTokensProvider": undefined,
  "signatureHelpProvider": undefined,
  "textDocumentSync": {
    "change": 1,
    "openClose": true,
    "save": true,
    "willSave": false,
    "willSaveWaitUntil": false,
  },
  "typeDefinitionProvider": undefined,
  "typeHierarchyProvider": undefined,
  "workspace": {
    "workspaceFolders": {
      "changeNotifications": true,
      "supported": true,
    },
  },
  "workspaceSymbolProvider": undefined,
}
`;

exports[`Capabilities Alignment Tests Server Capabilities Configuration should have consistent production capabilities: production-server-capabilities 1`] = `
{
  "callHierarchyProvider": undefined,
  "codeActionProvider": undefined,
  "codeLensProvider": {
    "resolveProvider": false,
  },
  "colorProvider": undefined,
  "completionProvider": undefined,
  "declarationProvider": undefined,
  "definitionProvider": undefined,
  "diagnosticProvider": {
    "identifier": "apex-ls-ts",
    "interFileDependencies": false,
    "workspaceDiagnostics": false,
  },
  "documentFormattingProvider": undefined,
  "documentHighlightProvider": undefined,
  "documentLinkProvider": undefined,
  "documentOnTypeFormattingProvider": undefined,
  "documentRangeFormattingProvider": undefined,
  "documentSymbolProvider": true,
  "executeCommandProvider": undefined,
  "experimental": {
    "findMissingArtifactProvider": {
      "enabled": false,
      "maxCandidatesToOpen": 3,
      "supportedModes": [
        "blocking",
        "background",
      ],
      "timeoutMsHint": 1500,
    },
  },
  "foldingRangeProvider": false,
  "hoverProvider": undefined,
  "implementationProvider": undefined,
  "inlayHintProvider": undefined,
  "inlineCompletionProvider": undefined,
  "inlineValueProvider": undefined,
  "linkedEditingRangeProvider": undefined,
  "monikerProvider": undefined,
  "publishDiagnostics": false,
  "referencesProvider": true,
  "renameProvider": undefined,
  "selectionRangeProvider": undefined,
  "semanticTokensProvider": undefined,
  "signatureHelpProvider": undefined,
  "textDocumentSync": {
    "change": 1,
    "openClose": true,
    "save": true,
    "willSave": false,
    "willSaveWaitUntil": false,
  },
  "typeDefinitionProvider": undefined,
  "typeHierarchyProvider": undefined,
  "workspace": {
    "workspaceFolders": {
      "changeNotifications": true,
      "supported": true,
    },
  },
  "workspaceSymbolProvider": undefined,
}
`;
